[gd_scene load_steps=2 format=3 uid="uid://ct1ykyf00v6r3"]

[ext_resource type="Script" path="res://addons/annotations_tree/annotations_area.gd" id="1_id54t"]

[node name="AnnotationsArea" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_id54t" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 1017.0
offset_bottom = 593.0

[node name="AnnotationFilter" type="MenuButton" parent="VBoxContainer"]
offset_right = 1010.0
offset_bottom = 29.0
shortcut_in_tooltip = false
text = "Filter annotations"
flat = false

[node name="AnnotationTree" type="Tree" parent="VBoxContainer"]
offset_top = 33.0
offset_right = 1010.0
offset_bottom = 586.0
rect_min_size = Vector2(100, 50)
size_flags_vertical = 3

[connection signal="item_selected" from="VBoxContainer/AnnotationTree" to="." method="_on_tree_item_selected"]
